clang/test/BSC/Negative/InitAnalysis/init-nonnull-struct.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// _Nonnull pointer struct fields must be properly initialized.

struct SP { int *_Nonnull p; int v; };
struct OuterP { struct SP inner; int x; };

_Safe void use_sp(struct SP s);
_Safe void use_op(struct OuterP s);

// _Nonnull struct with empty init: pointer field is null-initialized.
_Safe void test_nonnull_empty(void) {
    struct SP s = {}; // expected-error {{type contains nonnull pointer must be properly initialized}}
    use_sp(s);
}

// Nested _Nonnull struct with empty init.
_Safe void test_nested_nonnull_empty(void) {
    struct OuterP o = {}; // expected-error {{type contains nonnull pointer must be properly initialized}}
    use_op(o);
}
